src/snapshots/ktype__view__tests__caret_underline.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
15                                                                              
                                                                                
the quick brown fox
