src/snapshots/ktype__view__tests__duration_15s.snap
---
source: src/view.rs
expression: render_with_duration(0)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
ktype  @ punctuation  # numbers   [time] words   [15]  30  60  custom   [←→] cyc
                                                                                
                                                                                
the quick brown                                                                 
                                                                                
                                                                                
                                                                                
                                                                                
                                   [esc] quit
