src/snapshots/ktype__view__tests__duration_60s.snap
---
source: src/view.rs
expression: render_with_duration(2)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
ktype  [time] words   15  30  [60]  custom   [←→] cycle  [tab] restart  [shift+t
                                                                                
the quick brown                                                                 
                                                                                
                                                                                
                                                                                
[esc] quit
