src/snapshots/ktype__view__tests__modal_time.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
             ╭────────────────────────────────────────────────────╮             
             │                    Test Duration                   │             
ktype  [time]│                1 hour and 30 minutes               │art  [shift+t
             │╭──────────────────────────────────────────────────╮│             
the quick bro││1h30m_                                            ││             
             │╰──────────────────────────────────────────────────╯│             
             │use h for hours, m for minutes (e.g. 1h30m). 0 = inf│             
             │            [enter] apply   [esc] cancel            │             
[esc] quit   │                                                    │             
             ╰────────────────────────────────────────────────────╯
