src/snapshots/ktype__view__tests__punctuation_on_header.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
ktype  [@ punctuation]  # numbers   [time] words   [15]  30  60  custom   [←→] c
                                                                                
                                                                                
the quick brown fox                                                             
                                                                                
                                                                                
                                                                                
                                                                                
                                   [esc] quit
