src/snapshots/ktype__view__tests__results_punctuation_numbers_label.snap
---
source: src/view.rs
expression: output
---
                                                               [time] words   [15]  30  60  custom                                                              
                                                                                                                                                                
                    wpm                                                             no data                                                                     
                    24                                                                                                                                          
                                                                                                                                                                
                    acc                                                                                                                                         
                    100%                                                                                                                                        
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                    test type                       raw                                         time                                                            
                    time 15                         24                                          5s                                                              
                    english + punctuation + numbers                                                                                                             
                                                                [tab] change/restart   [esc] quit
