src/snapshots/ktype__view__tests__results_screen_snapshot.snap
---
source: src/view.rs
expression: output
---
                           [time] words   [15]  30  60                          
                                                                                
wpm                                         no data                             
12                                                                              
                                                                                
acc                                                                             
0%                                                                              
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
test type     raw                              time                             
time 15       18                               10s                              
english                                                                         
                        [tab] change/restart   [esc] quit
